--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,8 @@ p {
 }
 
 #juego {
+    margin-left: 35%;
+    margin-right: 35%;
     text-align: center;
     text-shadow: 0.0625rem 0.0625rem 0.125rem black;
     font-size: 2.75rem;
@@ -76,6 +78,7 @@ p {
 
 #juego p {
     text-align: center;
+    color: orangered;
 }
 
 #categoria {
